<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/appInstructionsLBL"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/airLBL" />

    <RadioGroup
        android:id="@+id/airRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/air0RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/air0LBL" />

        <RadioButton
            android:id="@+id/air1RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air1LBL" />

        <RadioButton
            android:id="@+id/air2RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air2LBL" />

        <RadioButton
            android:id="@+id/air3RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air3LBL" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/airRG"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/numMonthsLBL" />

    <SeekBar
        android:id="@+id/numMonthsSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="13dp"
        android:max="348" />

    <EditText
        android:id="@+id/numMonthsET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/numMonthsSB"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numMonthsSB"
        android:layout_marginTop="54dp"
        android:text="@string/initBalLBL" />

    <EditText
        android:id="@+id/initBalET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calcBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/initBalET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/calculateLBL" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/calcBTN"
        android:layout_marginTop="55dp"
        android:text="@string/paymentLBL" />

    <EditText
        android:id="@+id/paymentET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/numMonthsET"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal" />

</RelativeLayout>
